--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ lisaorbits = "^2.4.2"
 numpy = "^2.1.3"
 scipy = "^1.14.1"
 matplotlib = "^3.9.2"
+h5py = "^3.12.1"
+notebook = "^7.2.2"
+ipykernel = "^6.29.5"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
